--- a/deployment.yml
+++ b/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: spring-boot-k8s
-          image: shoaibpathan/healthcare:latest # Image that will be used to containers in the cluster
+          image: shoaibpathan/healthcare:1.0 # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8082 # The port that the container is running on in the cluster
