--- a/deployment.yml
+++ b/deployment.yml
@@ -1,36 +1,35 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment
 metadata:
   name: healthcare-deployment
 spec:
   selector:
     matchLabels:
-      app: heathcare-k8s
-  replicas: 2 # Number of replicas that will be created for this deployment
+      app: healthcare
+  replicas: 2
   template:
     metadata:
       labels:
-        app: heathcare-k8s
+        app: healthcare
     spec:
       containers:
-        - name: spring-boot-k8s
-          image: shoaibpathan/healthcare:1.0 # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
+        - name: healthcare-app
+          image: shoaibpathan/healthcare:1.0
           ports:
-            - containerPort: 8082 # The port that the container is running on in the cluster
-
+            - containerPort: 8082
 
 ---
 
-apiVersion: v1 # Kubernetes API version
-kind: Service # Kubernetes resource kind we are creating
-metadata: # Metadata of the resource kind we are creating
-  name: healthcare-k8ssvc
+apiVersion: v1
+kind: Service
+metadata:
+  name: healthcare-service
 spec:
   selector:
-    app: heathcare-k8s
+    app: healthcare
   ports:
     - protocol: "TCP"
-      port: 8082 # The port that the service is running on in the cluster
-      targetPort: 8082 # The port exposed by the service
-  type: NodePort # type of the service.
+      port: 8082
+      targetPort: 8082
+  type: LoadBalancer
+
