--- a/deployment.yml
+++ b/deployment.yml
@@ -1,35 +1,36 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: Deployment # Kubernetes resource kind we are creating
 metadata:
   name: healthcare-deployment
 spec:
   selector:
     matchLabels:
-      app: healthcare
-  replicas: 2
+      app: heathcare-k8s
+  replicas: 2 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
-        app: healthcare
+        app: heathcare-k8s
     spec:
       containers:
-        - name: healthcare-app
-          image: shoaibpathan/healthcare:1.0
+        - name: spring-boot-k8s
+          image: balunideepak/healthcare:latest # Image that will be used to containers in the cluster
+          imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8082
+            - containerPort: 8082 # The port that the container is running on in the cluster
+
 
 ---
 
-apiVersion: v1
-kind: Service
-metadata:
-  name: healthcare-service
+apiVersion: v1 # Kubernetes API version
+kind: Service # Kubernetes resource kind we are creating
+metadata: # Metadata of the resource kind we are creating
+  name: healthcare-k8ssvc
 spec:
   selector:
-    app: healthcare
+    app: heathcare-k8s
   ports:
     - protocol: "TCP"
-      port: 8082
-      targetPort: 8082
-  type: LoadBalancer
-
+      port: 8082 # The port that the service is running on in the cluster
+      targetPort: 8082 # The port exposed by the service
+  type: NodePort # type of the service
