--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -17,13 +17,21 @@
     - name: Display kubectl apply output
       debug:
         var: k8s_output.stdout_lines
-     # Prometheus setup
+    - name: Monitoring Stack Setup (Prometheus, Node Exporter, Grafana)
+  hosts: localhost
+  become: true
+  tasks:
+
+    # -----------------------
+    # Prometheus Setup
+    # -----------------------
+
     - name: Create Prometheus directory
       file:
         path: /opt/prometheus
         state: directory
-        owner: ubuntu
-        group: ubuntu
+        owner: ec2-user
+        group: ec2-user
         mode: '0755'
 
     - name: Download Prometheus
@@ -60,10 +68,10 @@
           After=network-online.target
 
           [Service]
-          User=ubuntu
+          User=ec2-user
           ExecStart=/opt/prometheus/prometheus --config.file=/opt/prometheus/prometheus.yml
           Restart=always
-  
+
           [Install]
           WantedBy=multi-user.target
         mode: '0644'
@@ -81,7 +89,10 @@
         name: prometheus
         state: started
 
-    # Node Exporter setup
+    # -----------------------
+    # Node Exporter Setup
+    # -----------------------
+
     - name: Download Node Exporter
       get_url:
         url: "https://github.com/prometheus/node_exporter/releases/download/v1.9.0/node_exporter-1.9.0.linux-amd64.tar.gz"
@@ -108,7 +119,7 @@
           After=network-online.target
 
           [Service]
-          User=ubuntu
+          User=ec2-user
           ExecStart=/opt/node_exporter/node_exporter
           Restart=always
 
@@ -129,7 +140,10 @@
         name: node_exporter
         state: started
 
-    # Grafana setup
+    # -----------------------
+    # Grafana Setup (RHEL-based systems)
+    # -----------------------
+
     - name: Add Grafana repository
       yum_repository:
         name: grafana
