--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,4 +1,3 @@
-
 - name: Running Kubernetes Cluster
   hosts: localhost
   become: true
@@ -95,6 +94,11 @@
         dest: /opt/
         remote_src: yes
 
+    - name: Ensure /opt/node_exporter directory is clean
+      file:
+        path: /opt/node_exporter
+        state: absent
+
     - name: Move Node Exporter to final path
       command: mv /opt/node_exporter-1.9.0.linux-amd64 /opt/node_exporter
       args:
@@ -131,23 +135,18 @@
         name: node_exporter
         state: started
 
-    # Grafana setup (Ubuntu-based)
-    - name: Add Grafana APT key
-      apt_key:
-        url: https://packages.grafana.com/gpg.key
-        state: present
-
-    - name: Add Grafana APT repository
-      apt_repository:
-        repo: 'deb https://packages.grafana.com/oss/deb stable main'
-        state: present
-
-    - name: Update APT cache
-      apt:
-        update_cache: yes
+    # Grafana setup
+    - name: Add Grafana repository
+      yum_repository:
+        name: grafana
+        description: Grafana Repository
+        baseurl: https://packages.grafana.com/oss/rpm
+        enabled: yes
+        gpgcheck: yes
+        gpgkey: https://packages.grafana.com/gpg.key
 
     - name: Install Grafana
-      apt:
+      yum:
         name: grafana
         state: present
 
