--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -136,6 +136,11 @@
         state: started
 
     # Grafana setup (Ubuntu/Debian-based)
+    - name: Add Grafana GPG key
+      apt_key:
+        url: https://packages.grafana.com/gpg.key
+        state: present
+
     - name: Add Grafana repository for Ubuntu
       apt_repository:
         repo: "deb https://packages.grafana.com/oss/deb stable main"
