--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,3 +1,4 @@
+---
 - name: Running Kubernetes Cluster
   hosts: localhost
   become: true
@@ -135,13 +136,13 @@
         name: node_exporter
         state: started
 
-    # Grafana setup
+    # Grafana setup (Ubuntu/Debian-based)
     - name: Add Grafana GPG key
       apt_key:
         url: https://packages.grafana.com/gpg.key
         state: present
 
-    - name: Add Grafana repository
+    - name: Add Grafana repository for Ubuntu
       apt_repository:
         repo: "deb https://packages.grafana.com/oss/deb stable main"
         state: present
@@ -152,7 +153,7 @@
         name: grafana
         state: present
 
-    - name: Start and enable Grafana service
+    - name: Start Grafana Service
       service:
         name: grafana-server
         state: started
@@ -169,7 +170,7 @@
     - name: Copy Grafana dashboard JSON
       copy:
         src: "{{ playbook_dir }}/../terraform/grafana/dashboard/system-metrics.json"
-        dest: /var/lib/grafana/dashboards/system-metrics.json
+        dest: "/var/lib/grafana/dashboards/system-metrics.json"
         remote_src: no
         owner: grafana
         group: grafana
@@ -185,7 +186,7 @@
 
     - name: Copy Grafana provisioning YAML
       copy:
-        src: "{{ playbook_dir }}/../terraform/grafana/provisioning/dashboard.yml"
+        src: "{{ playbook_dir }}/../terraform/grafana/provisioning/dashboards/dashboard.yml"
         dest: /etc/grafana/provisioning/dashboards/dashboard.yml
         remote_src: no
         owner: grafana
@@ -196,3 +197,4 @@
       service:
         name: grafana-server
         state: restarted
+
